# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  26 Apr 2005; Marius Mauch <genone@gentoo.org> cnf/make.globals*:
  Add FEATURES=strict.

  25 Apr 2005; Mike Frysinger <vapier@gentoo.org> bin/ebuild-functions.sh:
  Remove autoconfig FEATURE and make it always run Bug #81822.

  25 Apr 2005; Marius Mauch <genone@gentoo.org> pym/portage.py:
  remove the stupid "masked by -* keyword" message.

  24 Apr 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py:
  Added a class called DependSpec which handles parsing *DEPEND and SRC_URI
  strings. Read-only at the moment, but will probably change later.

  24 Apr 2005; Jason Stubbs <jstubbs@gentoo.org> bin/emerge pym/portage.py:
  Removed support for --inject and --upgradeonly as well as the now unused
  digraph class.

  23 Apr 2005; Marius Mauch <genone@gentoo.org> pym/ebuild.py:
  forward port fix for bug 77794.

  19 Apr 2005; Mike Frysinger <vapier@gentoo.org> bin/etc-update:
  Clean up some silly `cat` usages and make the output format pretty.

  12 Apr 2005; Mike Frysinger <vapier@gentoo.org> bin/quickpkg pym/ebuild.py 
  pym/portage.py:
  Rename 'portage-pkg' to 'binpkgs' so tab completion for 'portage' works.

  08 Apr 2005; Marius Mauch <genone@gentoo.org> bin/emerge:
  Add a list of active user config files to emerge --info.
  
  06 Apr 2005; Marius Mauch <genone@gentoo.org> pym/set_modules/*.py:
  Added a basic framework for package sets including modules for "system",
  general filelists (including "world") and "security", the latter currently
  depending on glsa.py from gentoolkit.

  03 Apr 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_dep.py: