@@ -7,6 +7,10 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  29 Apr 2005; Mike Frysinger <vapier@gentoo.org> bin/env-update.sh 
+  pym/portage.py pym/portage_const.py:
+  Remove execution of depscan.sh #86523.
+
   26 Apr 2005; Marius Mauch <genone@gentoo.org> cnf/make.globals*:
   Add FEATURES=strict.
 
